@@ -1,3 +1,4 @@
+hints.txt
 tmp/
 git.diff
 .vscode/.ropeproject
