@@ -141,6 +141,7 @@ list(APPEND PUB_HDRS ${CMAKE_CURRENT_SOURCE_DIR}/basedefs.h
                      ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwarr.h
                      ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwbits.h
                      ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwconv.h
+                     ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwhmap.h
                      ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwpool.h
                      ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwsha2.h
                      ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwstree.h
